<resources>
    <string name="app_name">Wings</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contact permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_pick_up">Pick Ups Today</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abu Haris</string>
    <string name="nav_header_subtitle">Pickup Manager</string>
    <string name="nav_header_delivery_officer">Delivery Officer</string>
    <string name="nav_header_delivery_supervisor">Delivery Supervisor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_bulk">Create Bulk</string>
    <string name="title_activity_delivery">deliveryActivity</string>
    <string name="title_activity_orderlist">orderlistActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pick_ups">pickups</string>
    <string name="title_activity_testing">Testing</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="large_text">

    </string>
    <string name="title_activity_pickups_today__manager">Pickup Summary</string>
    <string name="title_activity_assign_pickup__manager">Logistics</string>
    <string name="title_activity_assign_pickup_fulfillment__manager">Fulfillment</string>
    <string name="title_activity_pickup_history__manager">Pickup History</string>
    <string name="uploaded_product_count">Executive :</string>
    <string name="assigned_product_count">Order Qty :</string>
    <string name="total_products_picked">Picked Qty :</string>
    <string-array name="exe_names">
        <item>Choose executive…</item>
        <item>Ashfaque</item>
        <item>Rokon</item>
        <item>Yusuf</item>
        <item>Rubel</item>
        <item>Tonoy</item>
        <item>Shojol</item>
        <item>Monirul</item>
        <item>Jony</item>
        <item>Sohag</item>
        <item>Saiful</item>
    </string-array>
    <string-array name="onholdreasonsforpickup">
        <item>Please select an option..</item>
        <item>স্টকে পণ্য নেই</item>
        <item>গুণগত মান / প্যাকেজিং সমস্যা</item>
        <item>মার্চেন্টের সাথে যোগাযোগ করা যাচ্ছে না</item>
        <item>মার্চেন্ট অনুপস্থিত</item>
        <item>মার্চেন্ট দেরি করেছে</item>
        <item>নির্ধারিত সময়ের পর পিক আপ অনুরোধ</item>
    </string-array>
    <string-array name="onholdreasons">
        <item>Please select an option...</item>
        <item>Customer unreachable</item>
        <item>Customer request</item>
    </string-array>
    <string-array name="bankList">
        <item value="1">Eastern Bank Ltd.</item>
        <item value="2">The City Bank Limited</item>
        <item value="3">Dutch-Bangla Bank Ltd</item>
    </string-array>
    <string-array name="cancelreason">
        <item>Please select an option...</item>
        <item>মার্চেন্ট অর্ডার বাতিল করেছে</item>
        <item>পরিবহন ঝুঁকিপূর্ণ পণ্য</item>
        <item>স্টকে পণ্য নেই</item>

    </string-array>
    <string-array name="completereason">
        <item>Please select an option...</item>
        <item>ওকে</item>
    </string-array>
    <string-array name="partialreason">
        <item>Please select an option...</item>
        <item>মার্চেন্ট পণ্য হস্তান্তর করতে পারছে না</item>
        <item>গুণগত মান / প্যাকেজিং সমস্যা</item>
    </string-array>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section_format2">Hello World from section: %1$d</string>
    <string name="title_activity_baal">Baal</string>
    <string name="title_activity_lol">lol</string>
    <string name="title_activity_lel">lel</string>
    <string name="tab_text_1">My Daily Delivery</string>
    <string name="tab_text_2">My Daily Expense</string>
    <string name="title_activity_ppl">ppl</string>
    <string name="picked_qty">Picked Qty :</string>
    <string name="received_qty">Received Qty :</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">TextView</string>
    <string name="select_date">Select Date</string>
    <string name="select_exe">Select Executive</string>
    <string name="title_activity_executive_card_menu">Home</string>
    <string name="pickup_executive">Pickup Officer</string>
    <string name="pickup_supervisor">Pickup Supervisor</string>
    <string name="delivery_supervisor">Delivery Supervisor</string>
    <string name="exe_name">Tonoy Shaha</string>
    <string name="delivery_officer_name">Md. Asad</string>
    <string name="delivery_supervisor_name">Md. Delivery Supervisor</string>
    <string name="title_activity_manager_card_menu">Home</string>
    <string name="title_activity_pickups_today__executive">Pickup Summary</string>
    <string name="title_activity_pickup_status__executive">Pickup Status</string>
    <string name="title_activity_my_pickups__executive">My Pickup List</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search">Search…</string>
    <string name="assign_executives">Assign Executives</string>
    <string name="call">Call:</string>
    <string name="view_assigns">View Assigns</string>
    <string name="_01781278896">01781278896</string>
    <string name="assigned_executives">Assigned Executives</string>
    <string name="assigned_counts">Assigned Counts</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="title_activity_testing_fulfillment">Fulfillment</string>
    <string name="title_activity_ajker_deal__assign__pickup_manager">
        AjkerDeal_Assign_Pickup_manager
    </string>
    <string name="title_activity_ajker_deal_other__assign__pickup_manager">
        Ajker Deal Direct Delivery
    </string>
    <string name="title_activity_ajker_deal_ekshop__assign__pickup_manager">
        AjkerDealEkshop_Assign_Pickup_manager
    </string>
    <string name="title_activity_robishop__assign_pickup_manager">Robishop
    </string>
    <string name="title_activity_pending_summary__manager">Pending Report</string>
    <string name="title_activity_auto_assign_my_pickuplist">Auto Assign My Pickup List</string>
    <string name="title_activity_supervisor_card_menu">Home</string>
    <string name="title_activity_assign_pickup__supervisor">Assign (Logistic)</string>
    <string name="title_activity_pickups_today__supervisor">Pickups Today</string>
    <string name="title_activity_ajker_deal_other__assign__pickup_supervisor">
        Assign Ajker Deal Direct Delivery
    </string>
    <string name="title_activity_fulfillment_assign_pickup__supervisor">
        Assign(Fulfillment)
    </string>
    <string name="title_activity_delivery_officer_card_menu">Delivery</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_delivery_officer_unpicked">Unpicked</string>
    <string name="title_activity_delivery_without_status">Without Status</string>
    <string name="title_activity_delivery_on_hold">Delivery On Hold</string>
    <string name="title_activity_delivery_quick_scan">Quick Delivery</string>
    <string name="title_activity_delivery__return_to_supervisor">Return To Supervisor
    </string>
    <string name="title_activity_delivery_cts">Cash To Supervisor</string>
    <string name="title_activity_return_request">Return Request</string>
    <string name="title_activity_delivery_cash_rs">Cash Received List</string>
    <string name="title_activity_delivery_return_by_supervisor">Return Received List</string>
    <string name="title_activity_delivery_petty_cash">Delivery Petty Cash</string>
    <string name="title_activity_delivery_courier">Courier Receive</string>
    <string name="title_activity_delivery_main_page">Home</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_delivery_home">Home</string>
    <string name="title_activity_delivery_add_new_expense">Add New Expense</string>
    <string name="title_activity_delivery_tablayout">Home</string>
    <string name="title_activity_delivery_super_visor_tablayout">Home
    </string>
    <string name="title_activity_delivery_sdp2">DeliverySDp2</string>
    <string name="title_activity_delivery_scash_receive">Cash Receive</string>
    <string name="title_activity_delivery_sreturn_receive">Return Receive</string>
    <string name="title_activity_delivery_courier_details">Delivery Courier Details</string>
    <string name="title_activity_delivery_sup_unpicked">Unpicked</string>
    <string name="title_activity_delivery_sup_without_status">Without Status</string>
    <string name="title_activity_delivery_sup_onhold">Onhold</string>
    <string name="title_activity_delivery_super_visor_pre_ret">Return Request</string>
    <string name="title_activity_delivery_sup_pre_ret">Return Request</string>
    <string name="title_activity_delivery_sup_return_list">Return List</string>
    <string name="title_activity_delivery_sup_cash">Cash</string>
    <string name="title_activity_delivery_cash_receive_supervisor">Cash Recieve</string>
    <string name="title_activity_return_receive_supervisor">Return Recieve</string>
    <string name="title_activity_bank_deposite_supervisor">Supervisor Bank Deposite</string>
    <string name="title_activity_delivery_sup_bank_report">Bank Report</string>
    <string name="title_activity_delivery_re_attempt">Delivery Re-Attempt</string>
    <string name="title_activity_bank_details_upload_supervisor">Bank Details
    </string>
    <string name="title_activity_delivery_sup_crs">Cash Receive</string>
    <string name="title_activity_bank_details_upload_by__do">Delivery-Officer Bank Deposite</string>
    <string name="title_activity_delivery_sup_dp2_done">Received Percels</string>
    <string name="title_activity_delivery_sup_dp2_not_done">Percels Not-Received</string>
    <string name="title_activity_delivery_officer_bank_info_add">Delivery-Officer Bank Deposite</string>
    <string name="title_activity_bank_deposite">DP2 Management</string>
    <string name="title_activity_multiple_bank_deposite_by_DO">Delivery-Officer Bank Deposite</string>
    <string name="title_activity_multiple_bank_deposite_by_sup">Supervisor Bank Deposite</string>
    <string name="title_activity_delivery_docash_rcv_by_do">DeliveryDOCashRcvByDO</string>
    <string name="title_activity_delivery_dobank_by_do">DeliveryDOBankByDO</string>
    <string name="title_activity_delivery_domultiple_batch_selection">
        DeliveryDOMultipleBatchSelection
    </string>
    <string name="title_activity_delivery_doreturn_rcv_by_do">DeliveryDOReturnRcvByDO</string>
</resources>