<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickupsToday_Manager"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_color_selector">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1"
           />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2"
         />


        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>

    <include
        android:id="@+id/include"
        layout="@layout/content_pickup_history__manager" />

    <TextView
        android:id="@+id/pickDateTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:paddingTop="5dp"
        android:layout_marginTop="105dp"
        android:background="@drawable/rectangle"
        android:elevation="2dp"
        android:padding="10dp"
        android:text="@string/select_date"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center_horizontal" />

    <TextView
        android:id="@+id/pickExecutive"
        android:background="@drawable/rectangle2"
        android:text="@string/select_exe"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:paddingTop="5dp"
        android:layout_marginTop="150dp"
        android:elevation="2dp"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="center_horizontal"
        />


</android.support.design.widget.CoordinatorLayout>