<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickupStatus_Executive"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_color_selector"
           >

            <android.support.design.widget.TabItem
                android:id="@+id/tabItemComp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1"
             />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItemPend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2"
             />


        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>
    <include
        android:id="@+id/include2"
        layout="@layout/content_pickup_history__manager" />

    <include layout="@layout/content_pickup_status__executive" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/pickDateTxt_exe"
        android:layout_width="180dp"
        android:layout_height="5mm"
        android:layout_marginTop="125dp"
        android:background="@drawable/rectangle"
        android:padding="1mm"
        android:text="@string/select_date"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:elevation="2dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include2"
        app:layout_anchorGravity="center_horizontal" />

</android.support.design.widget.CoordinatorLayout>