<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view_merchant="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_merchant"
    android:layout_width="match_parent"
    android:layout_height="155dp"
    android:layout_margin="5dp"
    android:foreground="?selectableItemBackground"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    card_view_merchant:cardElevation="3dp"
    card_view_merchant:contentPadding="4dp">
    <!--card_view_merchant:cardBackgroundColor="#e1e1e1"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/light_grey">


        <TextView
            android:id="@+id/merchant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lines="1"
            android:maxLines="2" />

        <TextView
            android:id="@+id/a_qty"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/u_qty"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_marginStart="170dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/r_qty"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/u_qty"
            android:layout_marginStart="170dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/a_qty"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="1dp"
            android:text="@string/assigned_product_count"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/u_qty"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="-1dp"
            android:text="@string/uploaded_product_count"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt2"
            android:layout_alignTop="@+id/r_qty"
            android:layout_marginStart="0dp"
            android:layout_marginTop="1dp"
            android:text="@string/total_products_picked"
            android:textSize="15sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="18dp"
            android:background="?android:attr/listDivider" />

    </RelativeLayout>
</android.support.v7.widget.CardView>