<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view_merchant="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_history_d"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="5dp"
    android:foreground="?selectableItemBackground"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    card_view_merchant:cardBackgroundColor="#fff"
    card_view_merchant:cardElevation="3dp"
    card_view_merchant:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <TextView
            android:id="@+id/m_name_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="0dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lines="1"
            android:maxLines="2" />

        <TextView
            android:id="@+id/a_qty_d"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/u_qty_d"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_marginStart="170dp"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/r_qty_d"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/u_qty_d"
            android:layout_marginStart="170dp"
            android:layout_marginTop="7dp"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/a_qty_d"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:text="@string/assigned_product_count"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="-170dp"
            android:layout_marginBottom="-2dp"
            android:layout_toStartOf="@+id/a_qty_d"
            android:text="@string/picked_qty"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt2"
            android:layout_alignTop="@+id/r_qty_d"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/received_qty"
            android:textSize="15sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="55dp"
            android:background="?android:attr/listDivider"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/divider2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="0dp"
            android:maxLines="1"
            android:text="Executive :"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/exe_name_d"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="15dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.v7.widget.CardView>